syntax = "proto3";
package librevault.meta.v2;

message EncryptionMetadata {
  uint32 kid = 1;

  message AesGcmSivAlgorithm {
    bytes nonce = 1;
  }
  oneof algorithm {
    AesGcmSivAlgorithm aes_gcm_siv = 2;
  }
}

message EncryptedData {
  EncryptionMetadata metadata = 1;
  bytes ciphertext = 2;
}

message ReferenceHash {
  bytes multihash = 1;
}

message ChunkMetadata {
  EncryptionMetadata encryption_metadata = 1;
  ReferenceHash chunk = 2;
  ReferenceHash chunk_pt = 4;
  uint32 size = 3;
}

// Represents data streams for file
message DataStream {
  repeated ReferenceHash chunk_md = 1;
}

message ObjectMetadata {
  enum ObjectType {
    FILE = 0;
    DIRECTORY = 1;
    SYMLINK = 2;
  }
  ObjectType type = 1;

  bytes path = 2;

  message FileTimes {
    // Unix: mtime
    // Win: ftLastWriteTime
    int64 mtime = 3;
    // Unix: atime
    // Win: ftLastAccessTime
    int64 atime = 4;
    // Linux: statx.btime
    // Unix: stat.birthtime
    // Win: ftCreationTime
    int64 crtime = 5;
  }
  optional FileTimes filetimes = 3;

  // Unix: mode
  // Win: -nothing-
  optional uint32 mode = 6;
  // Unix: uid
  // Win: -nothing-
  optional uint32 uid = 7;
  // Unix: gid
  // Win: -nothing-
  optional uint32 gid = 8;

  optional string symlink_target = 9;

  // Unix: -nothing-
  // Win: dwFileAttributes
  optional uint32 file_attributes = 10;

  // DataStream reference.
  optional ReferenceHash stream = 11;

  /// Extended attributes
  //pub attr_streams: Vec<Attribute>,
}

// This structure represents a changeset, that is used to represent a state transition between one or more parent ChangeSets.
message Snapshot {
  repeated ReferenceHash parents = 1;

  enum Type {
    FULL = 0;
    DELTA = 1;
  }
  Type type = 2;

  repeated ReferenceHash object_md = 3;
  repeated ReferenceHash datastream = 4;
}
